// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle the descending sort direction 1`] = `
<div>
  <label
    id="aria-projects-sort"
  >
    projects.sort_by
    :
  </label>
  <Select
    aria-labelledby="aria-projects-sort"
    className="little-spacer-left input-medium it__projects-sort-select"
    components={
      {
        "Option": [Function],
      }
    }
    isClearable={false}
    isSearchable={false}
    onChange={[Function]}
    options={
      [
        {
          "className": undefined,
          "label": "projects.sorting.name",
          "value": "name",
        },
        {
          "className": undefined,
          "label": "projects.sorting.analysis_date",
          "value": "analysis_date",
        },
        {
          "className": undefined,
          "label": "projects.sorting.reliability",
          "value": "reliability",
        },
        {
          "className": undefined,
          "label": "projects.sorting.security",
          "value": "security",
        },
        {
          "className": undefined,
          "label": "projects.sorting.security_review",
          "value": "security_review",
        },
        {
          "className": undefined,
          "label": "projects.sorting.maintainability",
          "value": "maintainability",
        },
        {
          "className": undefined,
          "label": "projects.sorting.coverage",
          "value": "coverage",
        },
        {
          "className": undefined,
          "label": "projects.sorting.duplications",
          "value": "duplications",
        },
        {
          "className": undefined,
          "label": "projects.sorting.size",
          "value": "size",
        },
      ]
    }
  />
  <Tooltip
    mouseLeaveDelay={1}
    overlay="projects.sort_descending"
  >
    <ButtonIcon
      aria-label="projects.sort_descending"
      className="js-projects-sorting-invert spacer-left"
      color="#525252"
      innerRef={[Function]}
      onClick={[Function]}
    >
      <SortDescIcon />
    </ButtonIcon>
  </Tooltip>
</div>
`;

exports[`should render correctly for leak view 1`] = `
<div>
  <label
    id="aria-projects-sort"
  >
    projects.sort_by
    :
  </label>
  <Select
    aria-labelledby="aria-projects-sort"
    className="little-spacer-left input-medium it__projects-sort-select"
    components={
      {
        "Option": [Function],
      }
    }
    isClearable={false}
    isSearchable={false}
    onChange={[Function]}
    options={
      [
        {
          "className": undefined,
          "label": "projects.sorting.analysis_date",
          "value": "analysis_date",
        },
        {
          "className": undefined,
          "label": "projects.sorting.name",
          "value": "name",
        },
        {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_reliability",
          "value": "new_reliability",
        },
        {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_security",
          "value": "new_security",
        },
        {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_security_review",
          "value": "new_security_review",
        },
        {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_maintainability",
          "value": "new_maintainability",
        },
        {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_coverage",
          "value": "new_coverage",
        },
        {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_duplications",
          "value": "new_duplications",
        },
        {
          "className": "projects-leak-sorting-option",
          "label": "projects.sorting.new_lines",
          "value": "new_lines",
        },
      ]
    }
    value={
      {
        "className": "projects-leak-sorting-option",
        "label": "projects.sorting.new_coverage",
        "value": "new_coverage",
      }
    }
  />
  <Tooltip
    mouseLeaveDelay={1}
    overlay="projects.sort_ascending"
  >
    <ButtonIcon
      aria-label="projects.sort_ascending"
      className="js-projects-sorting-invert spacer-left"
      color="#525252"
      innerRef={[Function]}
      onClick={[Function]}
    >
      <SortAscIcon />
    </ButtonIcon>
  </Tooltip>
</div>
`;

exports[`should render correctly for overall view 1`] = `
<div>
  <label
    id="aria-projects-sort"
  >
    projects.sort_by
    :
  </label>
  <Select
    aria-labelledby="aria-projects-sort"
    className="little-spacer-left input-medium it__projects-sort-select"
    components={
      {
        "Option": [Function],
      }
    }
    isClearable={false}
    isSearchable={false}
    onChange={[Function]}
    options={
      [
        {
          "className": undefined,
          "label": "projects.sorting.name",
          "value": "name",
        },
        {
          "className": undefined,
          "label": "projects.sorting.analysis_date",
          "value": "analysis_date",
        },
        {
          "className": undefined,
          "label": "projects.sorting.reliability",
          "value": "reliability",
        },
        {
          "className": undefined,
          "label": "projects.sorting.security",
          "value": "security",
        },
        {
          "className": undefined,
          "label": "projects.sorting.security_review",
          "value": "security_review",
        },
        {
          "className": undefined,
          "label": "projects.sorting.maintainability",
          "value": "maintainability",
        },
        {
          "className": undefined,
          "label": "projects.sorting.coverage",
          "value": "coverage",
        },
        {
          "className": undefined,
          "label": "projects.sorting.duplications",
          "value": "duplications",
        },
        {
          "className": undefined,
          "label": "projects.sorting.size",
          "value": "size",
        },
      ]
    }
    value={
      {
        "className": undefined,
        "label": "projects.sorting.name",
        "value": "name",
      }
    }
  />
  <Tooltip
    mouseLeaveDelay={1}
    overlay="projects.sort_ascending"
  >
    <ButtonIcon
      aria-label="projects.sort_ascending"
      className="js-projects-sorting-invert spacer-left"
      color="#525252"
      innerRef={[Function]}
      onClick={[Function]}
    >
      <SortAscIcon />
    </ButtonIcon>
  </Tooltip>
</div>
`;

exports[`should render option correctly 1`] = `
<Option
  className="it__project-sort-option-foo undefined"
  data={
    {
      "label": "foo",
      "short": "fo",
      "value": "foo",
    }
  }
>
  fo
</Option>
`;

exports[`should render option correctly 2`] = `
<Option
  className="it__project-sort-option-foo undefined"
  data={
    {
      "label": "foo",
      "value": "foo",
    }
  }
/>
`;
